recommended_model openapi
