# openapi/go/model_stayed_location_view_model.go
@@ -1,0 +1,29 @@
+/*
+ * memote
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package viewmodel
+
+import (
+	"time"
+)
+
+type StayedLocationViewModel struct {
+
+	Name string `json:"name"`
+
+	Latitude float64 `json:"latitude"`
+
+	Longitude float64 `json:"longitude"`
+
+	Pictures []string `json:"pictures"`
+
+	StartTime time.Time `json:"startTime"`
+
+	EndTime time.Time `json:"endTime"`
+}
